vlib/v/checker/tests/import_mod_duplicate_err.vv
module json2

import x.json2

any := json2.Any(json2.null)

println(any)
